# py-qwen3-tts-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
py_qwen3_tts_cpp/: constants.py  model.py  utils.py
py_qwen3_tts_cpp/examples/: main.py  playback.py
src/: main.cpp
